--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -21,17 +21,16 @@
     .chat-group-form__field--left
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
-
-      / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-      / = f.collection_check_boxes :user_ids, User.all, :id, :name
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-      /
       #chat-group-users
-      /   #chat-group-user-currentuser.chat-group-user.clearfix
-      /     = hidden_field :group, :user_ids, value:"#{current_user.id}"
-      /     / %input{:name => "group[user_ids][]", :type => "hidden", :value => "#{current_user.id}"}
-      /     %p.chat-group-user__name
-      /       = current_user.name
+        - group.users.each do |user|
+          .chat-group-user.clearfix.js-chat-member{id: "chat-group-user-#{user.id}"}
+            = hidden_field_tag "group[user_ids][]","#{user.id}"
+            %p.chat-group-user__name #{user.name}
+            - if current_user.id == user.id
+              .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+            - else
+              .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
